# scorched-earth

./: .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  Pong.cpp  Pong.h  PongMockup.h  README.md  bagel.h  main.cpp  tests.cpp
SE/: ScorchedEarth.cpp  ScorchedEarth.h  main.cpp  scorched_earth.cpp  scorched_earth.h
docs/html/: _scorched_earth_8cpp.html  _scorched_earth_8cpp.js  _scorched_earth_8cpp_source.html  _scorched_earth_8h.html  _scorched_earth_8h.js  _scorched_earth_8h_source.html  annotated.html  annotated_dup.js  classes.html  classse_1_1_scorched_earth-members.html  classse_1_1_scorched_earth.html  classse_1_1_scorched_earth.js  dir_141aa0918fc3eab746547ef56b5a7bd7.html  dir_141aa0918fc3eab746547ef56b5a7bd7.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  hierarchy.js  index.html  main_8cpp.html  main_8cpp_source.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  namespaces_dup.js  namespacese.html  namespacese.js  navtreedata.js  navtreeindex0.js  structbagel_1_1_storage_3_01se_1_1_collided_01_4-members.html  structbagel_1_1_storage_3_01se_1_1_collided_01_4.html  (+13 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  (+22 more)
